kubernetes/apps/security/authentik/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik
  namespace: security
  annotations:
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns.home.arpa/enabled: "true"
    hajimari.io/icon: simple-icons:webauthn
spec:
  ingressClassName: nginx
  rules:
    - host: &host "authentik.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: authentik
                port:
                  number: 80
  tls:
    - hosts:
        - *host
      secretName: "authentik.${SECRET_DOMAIN}-tls"
